--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </title>
 </head>
 <body>
-    <header><A>luraflix</A></header>
+    <header><A>aluraflix</A></header>
     <h1>Propagandas</h1>
     <p>melhores Propagandas</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/lixuwpaCQkM?si=3od_9wDVAwQSrPGd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
